--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RxAndroidDemo</string>
-    <string name="WikiSearch">WikiSearch</string>
+    <string name="WikiSearch">天气情况</string>
     <string name="wiki_result">结果: </string>
     <string name="search_weather">查询天气</string>
     <string name="temperature">温度: </string>
